# ha-indygo-pool

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  codecov.yml  docker-compose.yml  hacs.json  pyproject.toml  pytest.ini  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: ci.yml  ha-compatibility.yml  release-drafter.yml  release.yml  stale.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/indygo_pool/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  hacs.json  manifest.json  models.py  parser.py  select.py  sensor.py  strings.json  switch.py
custom_components/indygo_pool/translations/: en.json  fr.json
scripts/: zip_release.py
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_binary_sensor_ipx.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_integration_structure.py  test_parser.py  test_select.py  test_sensor.py
tests/fixtures/: data.json
