[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
exclude = ["tests", "config", "docs"]

[project]
name = "ha-indygo-pool"
version = "1.0.6"
description = "Home Assistant integration for Indygo Pool"
requires-python = ">=3.9"
authors = [
    { name = "FunFR" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/indygo_pool/manifest.json:version",
    "custom_components/indygo_pool/const.py:VERSION",
]
branch = "main"
upload_to_pypi = false
upload_to_vcs_release = true
build_command = "pip install uv build && uv lock && git add uv.lock && python -m build"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
