[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
exclude = ["tests", "config", "docs"]

[project]
name = "ha-indygo-pool"
version = "2.0.1"
description = "Home Assistant integration for Indygo Pool"
requires-python = ">=3.12"
authors = [
    { name = "FunFR" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[dependency-groups]
dev = [
    "aiohttp>=3.9",
    "aioresponses>=0.7.8",
    "commitizen>=4.10.1",
    "python-dotenv>=1.2.1",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: tests that require real API credentials",
]
addopts = "--cov=custom_components.indygo_pool --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["custom_components/indygo_pool"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "try:",
    "except ImportError:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/indygo_pool/manifest.json:version",
    "custom_components/indygo_pool/const.py:VERSION",
]
branch = "main"
strict = true
build_command = "pip install uv build && uv lock && git add uv.lock && python -m build && python scripts/zip_release.py"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/indygo_pool.zip"]
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.remote]
type = "github"
