[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
exclude = ["tests", "config", "docs"]

[project]
name = "ha-indygo-pool"
version = "0.0.0"
description = "Home Assistant integration for Indygo Pool"
requires-python = ">=3.12"
authors = [
    { name = "FunFR" }
]
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[dependency-groups]
dev = [
    "aiohttp>=3.9",
    "aioresponses>=0.7.8",
    "commitizen>=4.10.1",
    "python-dotenv>=1.2.1",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: tests that require real API credentials",
]
addopts = "--cov=custom_components.indygo_pool --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["custom_components/indygo_pool"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "try:",
    "except ImportError:",
]
